--- a/package.json
+++ b/package.json
@@ -13,39 +13,23 @@
     },
     "private": true,
     "devDependencies": {
-        "jscs": "*",
-        "karma": "*",
-        "karma-firefox-launcher": "*",
-        "karma-mocha": "*",
-        "karma-phantomjs-launcher": "*",
-        "karma-sinon-expect": "*",
-        "casperjs": "*",
-        "mocha": "*",
-        "sinon": "*",
-        "expect.js": "*"
-    },
-    "dependencies": {
-        "borschik": "^1.1.0",
         "bower": "*",
+        "react": "*",
         "grunt": "^0.4.5",
-        "grunt-borschik": "^1.0.0",
-        "grunt-browserify": "^2.1.4",
-        "grunt-casper": "^0.3.10",
+        "grunt-autoprefixer": "^0.8.x",
         "grunt-cli": "*",
         "grunt-contrib-clean": "^0.6.0",
         "grunt-contrib-jshint": "*",
+        "grunt-contrib-stylus": "*",
         "grunt-contrib-watch": "*",
-        "grunt-csso": "^0.6.3",
-        "grunt-jscs": "*",
-        "grunt-karma": "*",
-        "grunt-autoprefixer": "^0.8.x",
-        "load-grunt-tasks": "*"
+        "grunt-react": "^0.9.0",
+        "load-grunt-tasks": "*",
+        "stylus": "*"
     },
     "engines": {
         "node": "0.10.*"
     },
     "scripts": {
-        "test": "grunt test",
-        "postinstall": "./node_modules/bower/bin/bower install && ./node_modules/grunt-cli/bin/grunt"
+        "postinstall": "./node_modules/bower/bin/bower install"
     }
 }
